--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 *.lo
 *.o
 *.obj
+objects/
 
 # Precompiled Headers
 *.gch
@@ -19,6 +20,7 @@
 # Fortran module files
 *.mod
 *.smod
+modules/
 
 # Compiled Static libraries
 *.lai
@@ -30,3 +32,8 @@
 *.exe
 *.out
 *.app
+*.x
+
+#Ipython
+*.ipynb
+
