Update .gitignore with ecsbatch

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,9 @@ rundir/launch_new_job.sc
 # Ignore reference files -- too big
 reference/
 
+# Ignore ecsbatch files
+ecsbatch*
+
 # Ignore modules and objects
 modules/
 objects/
