Fix formatting of density and energy constants

--- a/settings/model-settings.toml
+++ b/settings/model-settings.toml
@@ -47,12 +47,12 @@ M_high_b = -0.477
 M_high_c = 0.195
 
 # unlikely to change
-rhoi = 917.             #density of ice [kg m-3]
-rho_ocean = 1027.       #density of ocean water [kg m-3]
+rhoi = 917.0             #density of ice [kg m-3]
+rho_ocean = 1027.0       #density of ocean water [kg m-3]
 Tmelt = 273.15          #melting point of ice [K]
-Ec = 60000.             #activation energy for creep [J mole-1]
-Eg = 42400.             #activation energy for grain growth [J mole-1]
-Lh = 333500.            #latent heat of fusion [J kg-1]
+Ec = 60000.0           #activation energy for creep [J mole-1]
+Eg = 42400.0             #activation energy for grain growth [J mole-1]
+Lh = 333500.0            #latent heat of fusion [J kg-1]
 days_per_year = 365    #days per year [days]
 NaN_value = 9.96921E+36 #missing value for doubles
 cp_a = 152.5 #specific heat capacity is 152.5 + 7.122*T
