adding paths.toml to main

--- a/settings/model_settings.toml
+++ b/settings/model_settings.toml
@@ -19,16 +19,16 @@ det2d_minimum = 1.0e-05 #minimum magnitude for refreezing sum in 2ddetail output
 
 # TKTKTK: all below should be set by netcdf
 
-[forcing_description] # only used in naming conventions
-start_ts_year = "1939"
-end_ts_year = "2023" 
-start_ave_year = "1940"
-end_ave_year = "1970"
+# [forcing_description] # only used in naming conventions
+# start_ts_year = "1939"
+# end_ts_year = "2023" 
+# start_ave_year = "1940"
+# end_ave_year = "1970"
 
-[grid_dimensions]
-numLons = 438
-numLats = 566
-num_longitude_bands = 6
-numTimes = 246424
-nyears_simulation = 63
-nyears_spinup = 20
+# [grid_dimensions]
+# numLons = 438
+# numLats = 566
+# num_longitude_bands = 6
+# numTimes = 246424
+# nyears_simulation = 84
+# nyears_spinup = 30
