.toml paths to discuss

--- a/settings/model_settings.toml
+++ b/settings/model_settings.toml
@@ -2,10 +2,14 @@
 # Model settings #
 ##################
 
-run_type = "ecmwf" #ecmwf - run on ecmwf; offline - run on home computer; add other options as necessary; used for compiling in launch_job.sc
+run_location = "ecmwf" #ecmwf - run on ecmwf; offline - run on home computer; add other options as necessary; used for compiling in launch_job.sc
+restart_type = "none" # none -> do spinup; spinup -> start post-spinup; run -> start from end of last run
 
 domain = "FGRN055" # domain name, used in naming conventions
 forcing = "era055" # forcing name, used in naming conventions
+
+
+#DEFAULT
 
 [output_dimensions]
 proflayers = 3000
